# arsenal-rs

./: Cargo.toml  LICENSE  README.md
.cargo/: config
arbitrary_overwrite/: Cargo.toml
arbitrary_overwrite/src/: kcfg.rs  main.rs
buffer_overflow/: Cargo.toml
buffer_overflow/src/: main.rs  pool_overflow_arbitrary_read_write.rs  smep_kpti.rs  smep_no_kpti.rs
dll_injector_classic-rs/inject/: Cargo.toml
domain_info/: Cargo.toml  README.md
domain_info/src/: main.rs
ekko-rs/: README.md
ekko-rs/src/: ekko.rs  main.rs
example/: Cargo.toml
exploitation/: Cargo.toml
exploitation/src/: lib.rs
freshycalls_syswhispers/: Cargo.toml
freshycalls_syswhispers/src/: lib.rs  main.rs
freshycalls_syswhispers2/: Cargo.toml
freshycalls_syswhispers2/src/: main.rs  pemadness.rs
hash_calculator/src/: main.rs
hells_halos_tartarus_gate/: Cargo.toml  README.md
hells_halos_tartarus_gate/src/: lib.rs  main.rs
hostinfo/: Cargo.toml  README.md
hostinfo/src/: main.rs
loader/: README.md
manual_map-rs/: Cargo.toml  README.md
manual_map-rs/src/: lib.rs  main.rs
mem_encrypt_decrypt/: Cargo.toml  README.md
mem_encrypt_decrypt/src/: main.rs
mimikatz-rs/: Cargo.toml  LICENSE  README.md
module_stomping-rs/: README.md
module_stomping-rs/src/: main.rs
mordor/: Cargo.toml
mordor/src/: pemadness.rs
parallel_syscalls-rs/: Cargo.toml  README.md
parallel_syscalls-rs/src/: main.rs  parallel_syscalls.rs
parallel_syscalls/src/: main.rs  parallel_syscalls.rs
pe_injection-rs/: Cargo.toml  README.md
pe_injection-rs/src/: main.rs
pemem-rs/: Cargo.toml  README.md  rustfmt.toml
pemem-rs/src/: lib.rs
process_hollowing-rs/: README.md
process_hollowing-rs/src/: main.rs
reflective_loader/: Cargo.toml
shellcode_runner_classic-rs/: Cargo.toml
shellcode_runner_classic-rs/src/: main.rs
small_rdi-rs/inject/: Cargo.toml
src/: ekko.rs  main.rs
src/authentication/: mod.rs
src/escalation_permissions/: mod.rs
src/privilege/: mod.rs
suspended_process_ntdll_unhooker/: Cargo.toml  README.md
syscalls-rs/: README.md
test/: Cargo.toml
token/: Cargo.toml  README.md
windows_kernel_exploitation-rs/: README.md
(+32 files in other folders)
