[package]
name = "mimiread"
version = "0.1.0"
edition = "2018"

[dependencies]
winapi = { version = "0.3", features = ["bcrypt", "winnt", "minwindef", "ntdef", "libloaderapi", "psapi", "securitybaseapi"] }
winreg = "0.7.0"
kernel32-sys = "0.2.2"
memsec = "0.6.0"
libc = "0.2.15"
byteorder = "1.4.3"
sysinfo = "0.15.3"
anyhow = "1.0"

[profile.release]
panic = 'abort'
lto = true
opt-level = "z"